--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
