--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 PORT=8000
+
 DB_URI=mongodb://localhost:27017/
+CLIENT_URL=http://localhost:3000
+
 ACCESS_TOKEN_SECRET=long-secret-string
 REFRESH_TOKEN_SECRET=long-secret-string
