--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
-  "name": "05-rest-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "echo-server",
   "scripts": {
-    "dev": "nodemon api/index.ts"
+    "dev": "bun --hot run api/index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -17,7 +11,7 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.1",
     "zod": "^3.24.2"
   },
