feat: deploy client

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "echo",
   "private": true,
   "scripts": {
-    "dev": "turbo run dev"
+    "dev": "turbo run dev",
+    "build": "turbo run build"
   },
   "devDependencies": {
     "turbo": "^2.4.4",
