--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide": "^0.487.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.2"
   }
 }
