--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.2",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide": "^0.487.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.2"
+    "tailwindcss": "^4.1.2",
+    "zod": "^3.24.2"
   }
 }
