--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "@repo/server",
   "scripts": {
     "dev": "bun --hot run api/index.ts"
   },
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.1",
+    "@repo/validation": "workspace:*",
     "zod": "^3.24.2"
   },
   "devDependencies": {
