--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@repo/validation": "workspace:*",
     "@tailwindcss/vite": "^4.1.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
