--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.13",
+    "date-fns": "^4.1.0",
     "lucide": "^0.487.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.2",
