--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,6 +21,7 @@
     "lucide": "^0.487.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.2",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   }
 }
