--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,7 +2,8 @@
   "name": "@repo/server",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot run api/index.ts"
+    "dev": "bun --hot run api/index.ts",
+    "build": "tsup"
   },
   "dependencies": {
     "@repo/validation": "workspace:*",
@@ -30,6 +31,7 @@
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
+    "tsup": "^8.4.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0"
   }
