fix: try adding commands to vercel.json

--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -10,5 +10,8 @@
       "src": "/(.*)",
       "dest": "dist/index.cjs"
     }
-  ]
+  ],
+  "installCommand": "bun i",
+  "buildCommand": "bun run build",
+  "outputDirectory": "dist"
 }
