--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -2,7 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
     "dist/index.cjs": {
-      "runtime": "@vercel/node"
+      "runtime": "nodejs"
     }
   },
   "rewrites": [
