fix: remove build

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,8 +2,7 @@
   "name": "@repo/server",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot run api/index.ts",
-    "build": "tsup"
+    "dev": "bun --hot run api/index.ts"
   },
   "dependencies": {
     "@repo/validation": "workspace:*",
