--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "api/index.js": {
+    "dist/index.js": {
       "runtime": "@vercel/node@5.1.14"
     }
   },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "api/index.js"
+      "destination": "dist/index.js"
     }
   ]
 }
