--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "functions": {
-    "dist/index.js": {
-      "runtime": "@vercel/node@5.1.14"
-    }
-  },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "dist/index.js"
+      "destination": "dist/api/index.js"
     }
   ]
 }
