--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -1,6 +1,11 @@
 {
   "version": 2,
   "$schema": "https://openapi.vercel.sh/vercel.json",
+  "functions": {
+    "dist/api/index.js": {
+      "runtime": "@vercel/node@5.1.14"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
