--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "dist/api/index.js": {
+    "dist": {
       "runtime": "@vercel/node@5.1.14"
     }
   },
