feat: capsule component

--- a/packages/angular-client/package.json
+++ b/packages/angular-client/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "dev": "ng serve",
+    "dev": "ng serve --configuration development",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
@@ -18,6 +17,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "date-fns": "^4.1.0",
     "lucide-angular": "^0.503.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
