--- a/packages/angular-client/package.json
+++ b/packages/angular-client/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@repo/validation": "workspace:*",
     "@tailwindcss/postcss": "^4.1.4",
     "date-fns": "^4.1.0",
     "lucide-angular": "^0.503.0",
@@ -23,6 +24,8 @@
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.4",
     "tslib": "^2.3.0",
+    "uuid": "^11.1.0",
+    "zod": "3.24.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
